--- a/src/deploy_status.hbs
+++ b/src/deploy_status.hbs
@@ -1,14 +1,14 @@
 {{#each environments}}
 <div class="dropdown dropdown-deploy js-menu-container">
   <button type="button" class="text-{{this.state}} btn btn-sm btn-outline tooltipped tooltipped-n js-menu-target" aria-label="View deployment status" aria-haspopup="true">
-    {{stateIcon this.state}}
+    {{icon this.state}}
     {{this.name}}
   </button>
   <div class="dropdown-menu-content anim-scale-in js-menu-content">
    <div class="dropdown-menu dropdown-menu-s">
      <div class="deployments-header flex-table">
        <div class="state-icon flex-table-item">
-         {{stateIcon this.deployments.[0].state 2}}
+         {{icon this.deployments.[0].state 2}}
        </div>
        <h3 class="state-heading flex-table-item-primary">
          {{deployStateHeading this.deployments.[0].state this.name}}
@@ -21,12 +21,12 @@
             <img alt="@{{this.creator.login}}" class="avatar mr-3" height="32" src="{{this.creator.avatar_url}}&s=64" width="32">
           </a>
           <span class="deployment-description flex-table-item-primary">
-          <a href="{{this.statuses.[0].environment_url}}">{{stateIcon this.state}}{{this.description}}</a>requested by {{this.creator.login}} {{relTime this.created_at}}</span>
+          <a href="{{this.statuses.[0].environment_url}}">{{icon this.state}}{{this.description}}</a>requested by {{this.creator.login}} {{relTime this.created_at}}</span>
         </div>
         <ol class="status-list">
           {{#each this.statuses}}
             <li>
-            {{stateIcon this.state}}
+            {{icon this.state}}
             {{this.description}}
             {{relTime this.updated_at}}
             {{#if this.log_url}}
