--- a/src/deploy_status.hbs
+++ b/src/deploy_status.hbs
@@ -21,7 +21,16 @@
             <img alt="@{{this.creator.login}}" class="avatar mr-3" height="32" src="{{this.creator.avatar_url}}&s=64" width="32">
           </a>
           <span class="deployment-description flex-table-item-primary">
-          <a href="{{this.statuses.[0].environment_url}}">{{icon this.state}}{{this.description}}</a>requested by {{this.creator.login}} {{relTime this.created_at}}</span>
+            {{#if this.payload.image}}
+            <a href="https://{{this.payload.image}}">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" style="float: right">
+                <path fill="none" stroke="#000" stroke-width="1.5" d="M8.0137871 2.725v10.5682M5.7048882 2.725v10.5682M10.322686 2.725v10.5682M12.631577 2.725v10.5682M3.3959914 2.725v10.5682M.70957158.5146H15.290428c.347881.1145.137056.5898.194949.8737v13.9021c-.114976.3477-.589805.1371-.87377.1949H.70957158c-.34779856-.1149-.1371132-.5898-.19494927-.8737V.7095C.5117753.605.6050495.5118.7095716.5146z"/>
+              </svg>
+            </a>
+            {{/if}}
+            <a href="{{this.statuses.[0].environment_url}}">{{icon this.state}}{{this.description}}</a>
+            requested by {{this.creator.login}} {{relTime this.created_at}}
+          </span>
         </div>
         <ol class="status-list">
           {{#each this.statuses}}
