Deploy and container copy buttons

--- a/src/icon.hbs
+++ b/src/icon.hbs
@@ -1,5 +1,5 @@
 <svg aria-hidden="true"
-     class="octicon {{css}} build-status-icon text-{{state}}"
+     class="octicon {{css}}"
      width="{{scale width size}}"
      height="{{scale height size}}"
      role="img"
