--- a/src/deploy_status.hbs
+++ b/src/deploy_status.hbs
@@ -5,7 +5,7 @@
     {{this.name}}
   </button>
   <div class="dropdown-menu-content anim-scale-in js-menu-content">
-   <div class="dropdown-menu dropdown-menu-s">
+   <div class="dropdown-menu dropdown-menu-se">
      <div class="deployments-header flex-table">
        <div class="state-icon flex-table-item">
          {{icon this.deployments.[0].state 2}}
