[+ES] Make the deployment flow, Yo

--- a/src/deploy_status_menu.hbs
+++ b/src/deploy_status_menu.hbs
@@ -9,7 +9,7 @@
 {{#each deployments}}
  <div class="deployment">
    <div class="flex-table">
-     <a class="flex-table-item" aria-label="emilevauge" href="{{this.creator.url}}">
+     <a class="flex-table-item" href="{{this.creator.url}}">
        <img alt="@{{this.creator.login}}" class="avatar mr-3" height="32" src="{{this.creator.avatar_url}}&s=64" width="32">
      </a>
      <span class="deployment-description flex-table-item-primary">
